--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "async": "*",
+    "bcrypt-nodejs": "0.0.3",
     "bcryptjs": "^2.4.3",
     "body-parser": "~1.17.1",
     "connect-flash": "^0.1.1",
@@ -22,13 +23,13 @@
     "express-validator": "^4.1.1",
     "gulp": "^3.9.1",
     "gulp-sass": "^3.1.0",
-    "jsonwebtoken": "^8.0.0",
+    "jsonwebtoken": "^8.0.1",
     "mns-core-ui": "^7.1.11",
     "mongodb": "^2.2.31",
     "mongoose": "^4.11.9",
     "passport": "^0.4.0",
     "passport-http": "^0.3.0",
-    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^4.2.1",
     "serve-favicon": "~2.4.2"
   },
   "repository": {
